--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,7 @@
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:title="Dashboard"
+        android:title="Fragmento"
         android:icon="?android:attr/alertDialogIcon" />
 
     <item
